libraries/ckit/regression/valid-programs/a220.c
main () {
  return 1;
}

int foo () {
  extern int bar;
  return 1;
}

